# bucso2_repo

./: IF2_PATRON.csv  RF_S21_28to31GHz.csv  buc_diagnostics.py  buc_engine.py  buc_kernels.py  buc_models.py  buc_structures.py  buc_visuals.py  config copy.yaml  config.yaml  main.py  project_tree_out.json  pyproject.toml
out copy/: run_metadata.json
out_backup/: alt_global_designs.csv  final_policy.csv  if2_filter_response.csv  run_metadata.json  worst_case_ledger.csv
src/buc/: __init__.py  buc_diagnostics.py  buc_engine.py  buc_kernels.py  buc_markov.py  buc_models.py  buc_structures.py  buc_validation.py  buc_visuals.py
tests_hide/: conftest.py  test_config_and_models.py  test_diagnostics_smoke.py  test_kernels.py  test_spur_engine.py  test_visuals_and_markov.py
